spacing issues on home page

--- a/produceitem/app/globals.css
+++ b/produceitem/app/globals.css
@@ -478,7 +478,7 @@ body {
   opacity: 0.9;
   font-style: italic;
   max-width: 80%;
-  margin-top: 2rem;
+  margin-top: 4rem;
   margin-left: auto;
   margin-right: auto;
   display: block;
